--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,76 @@
-server.port=8080
+# Configuration du serveur
+# -------------------------------------
 
-# Configuration PostgreSQL
-# Ecoute port 6000
-spring.datasource.url=jdbc:postgresql://db:6000/Bloc3_jo2024
+# Port par défaut
+server.port=8080  
+
+# -------------------------------------
+# Configuration de la base de données PostgreSQL
+# Configuration PostgreSQL (ecoute sur le port 6000)
+# -------------------------------------
+spring.datasource.url=jdbc:postgresql://localhost:6000/Bloc3_jo2024
 spring.datasource.username=ADNMAK
 spring.datasource.password=AikidoSankyo73
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# -------------------------------------
+# Configuration de JPA et Hibernate
+# -------------------------------------
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# update | create | create-drop | validate | none
+spring.jpa.hibernate.ddl-auto=update
+
+# Affiche les requêtes SQL générées dans la console
+spring.jpa.show-sql=true
+
+# Formatage lisible des requêtes SQL
+spring.jpa.properties.hibernate.format_sql=true
+
+# -------------------------------------
+# Configuration du pool de connexions HikariCP
+# -------------------------------------
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=20000
+# -------------------------------------
+# Configuration JWT
+# -------------------------------------
+
+# Clé secrète pour signer les tokens JWT
+jwt.secret= ####### clé à définir #######
+
+# Durée de validité du token (24 heures en ms)
+jwt.expiration-ms=86400000
+
+# -------------------------------------
+# Configuration de la sécurité Spring
+# -------------------------------------
+
+# Compte utilisateur (admin)
+spring.security.user.name=admin
+
+# Mot de passe (admin)
+spring.security.user.password=passwordAdmin
+
+# -------------------------------------
+# Configuration des logs
+# -------------------------------------
+
+# Niveau de log pour les composants Spring
+logging.level.org.springframework=INFO
+
+# Niveau de log pour voir les requêtes SQL
+logging.level.org.hibernate.SQL=DEBUG
+
+# Niveau de log pour les valeurs des paramètres SQL
+logging.level.org.hibernate.type=TRACE
+
+# -------------------------------------
+# Configuration de l'encodage
+# -------------------------------------
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+
