--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-### docker-compose.yml
 services:
   db:
     image: postgres:17
@@ -17,6 +16,7 @@ services:
   backend:
     build:
       context: ./backend
+    container_name: back_jo2024
     ports:
       - "8080:8080"
     environment:
@@ -29,9 +29,11 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
+    container_name: front_jo2024
     ports:
       - "80:80"
+    depends_on:
+      - backend
 
 volumes:
   db_data:
