ajout fichier deploy.yml pour le ci/cd connection heroku et création fichier dans heroku

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,7 +15,7 @@ jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
 
 # Configuration Serveur (Spring Boot)
-server.port=${BACKEND_PORT}
+server.port=${BACKEND_PORT:8080}
 server.error.include-message=always
 
 # Configuration AOuth2
@@ -34,6 +34,3 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 debug=true
-
-
-
