add CorsConfig to fix error CORS and corection authentification

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Configuration PostgreSQL (via .env)
+# Configuration PostgreSQL
 spring.datasource.url=jdbc:postgresql://db:${POSTGRES_PORT}/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
