--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -53,7 +53,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
             # Gestion des erreurs API (backend hors ligne ou problème)
-            error_page 502 = /api-error.html;
+            error_page 502 /api-error.html;
         }
 
         # Compression Gzip pour optimiser les performances
