--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,18 +11,29 @@ jobs:
     environment: VPS
 
     steps:
-      # 1. Checkout du code
+      # 1. Récupération du code depuis le repo GitHub
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Docker Hub Login
+      # 2. Installation de Java 21 (nécéssaire pour compiler avec release 21)
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'  # tu peux aussi mettre 'zulu' ou 'oracle' si tu préfères
+
+      # 3. (Facultatif) Vérifie que Java 21 est bien actif
+      - name: Check Java version
+        run: java -version
+
+      # 4. Connexion à Docker Hub avec identifiants secrets
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 3. Tests backend
+      # 5. Lancement des tests backend avec Maven
       - name: Run backend tests
         run: |
           if [ -d "backend" ]; then
@@ -32,7 +43,7 @@ jobs:
             echo "Dossier backend introuvable"; exit 1
           fi
 
-      # 4. Tests frontend
+      # 6. Lancement des tests frontend avec npm
       - name: Run frontend tests
         run: |
           if [ -d "frontend" ]; then
@@ -43,7 +54,7 @@ jobs:
             echo "Dossier frontend introuvable"; exit 1
           fi
 
-      # 5. Build & push backend
+      # 7. Build de l'image Docker backend + push sur Docker Hub
       - name: Build & push backend Docker image
         run: |
           cd backend
@@ -51,14 +62,14 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/jo2024-backend .
           docker push ${{ secrets.DOCKER_USERNAME }}/jo2024-backend
 
-      # 6. Build & push frontend
+      # 8. Build de l'image Docker frontend + push sur Docker Hub
       - name: Build & push frontend Docker image
         run: |
           cd frontend
           docker build -t ${{ secrets.DOCKER_USERNAME }}/jo2024-frontend .
           docker push ${{ secrets.DOCKER_USERNAME }}/jo2024-frontend
 
-      # 7. Déploiement via SSH
+      # 9. Déploiement distant sur le serveur via SSH
       - name: Deploy on remote server via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -72,12 +83,13 @@ jobs:
             POSTGRES_PORT,
             JWT_SECRET,
             JWT_EXPIRATION,
+            ADMIN_EMAIL,
+            ADMIN_PASSWORD,
             EMAIL_USERNAME,
             EMAIL_PASSWORD
           script: |
             echo "Backup de l'état actuel"
             
-            # Sauvegarde les containers actifs seulement
             docker ps --filter "status=running" > deploy-backup-containers.txt || echo "Aucun container actif"
             docker-compose logs > deploy-backup-logs.txt || echo "Aucun log à sauvegarder"
             
@@ -86,8 +98,6 @@ jobs:
             docker pull ${{ secrets.DOCKER_USERNAME }}/jo2024-frontend
 
             echo "Vérification de la disponibilité de la base de données"
-            
-            # Vérifie que la base de données est accessible avant de continuer
             nc -zv db 5432 || (echo "Base de données non disponible" && exit 1)
 
             echo "Restart des services"
@@ -95,7 +105,5 @@ jobs:
             docker-compose up -d --build
 
             echo "Vérification de la santé du backend"
-            
-            # Temps de sommeil pour s'assurer que le backend est prêt
-            sleep 30  # Attendre 30 secondes
+            sleep 30  # Attente pour laisser le backend démarrer
             curl --fail http://localhost:8080/actuator/health || (echo "Le backend ne répond pas correctement" && exit 1)
