--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.sql.init.mode=always
+spring.jpa.open-in-view=false
 
 # Configuration JWT
 jwt.secret=${JWT_SECRET}
@@ -33,5 +33,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
-# Mot de passe administrateur (Jose2024)
+# Mot de passe administrateur (jose@studi.fr/Jose2024)
+admin.email=${ADMIN_EMAIL}
 admin.password=${ADMIN_PASSWORD}
