--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,29 +11,24 @@ jobs:
     environment: VPS
 
     steps:
-      # 1. Récupération du code depuis le repo GitHub
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Installation de Java 21 (nécéssaire pour compiler avec release 21)
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
-          distribution: 'temurin'  # tu peux aussi mettre 'zulu' ou 'oracle' si tu préfères
+          distribution: 'temurin'
 
-      # 3. (Facultatif) Vérifie que Java 21 est bien actif
       - name: Check Java version
         run: java -version
 
-      # 4. Connexion à Docker Hub avec identifiants secrets
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 5. Lancement des tests backend avec Maven
       - name: Run backend tests
         run: |
           if [ -d "backend" ]; then
@@ -43,7 +38,6 @@ jobs:
             echo "Dossier backend introuvable"; exit 1
           fi
 
-      # 6. Lancement des tests frontend avec npm
       - name: Run frontend tests
         run: |
           if [ -d "frontend" ]; then
@@ -54,7 +48,6 @@ jobs:
             echo "Dossier frontend introuvable"; exit 1
           fi
 
-      # 7. Build de l'image Docker backend + push sur Docker Hub
       - name: Build & push backend Docker image
         run: |
           cd backend
@@ -62,48 +55,50 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/jo2024-backend .
           docker push ${{ secrets.DOCKER_USERNAME }}/jo2024-backend
 
-      # 8. Build de l'image Docker frontend + push sur Docker Hub
       - name: Build & push frontend Docker image
         run: |
           cd frontend
           docker build -t ${{ secrets.DOCKER_USERNAME }}/jo2024-frontend .
           docker push ${{ secrets.DOCKER_USERNAME }}/jo2024-frontend
 
-      # 9. Déploiement distant sur le serveur via SSH
       - name: Deploy on remote server via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          envs: |
-            POSTGRES_DB,
-            POSTGRES_USER,
-            POSTGRES_PASSWORD,
-            POSTGRES_PORT,
-            JWT_SECRET,
-            JWT_EXPIRATION,
-            ADMIN_EMAIL,
-            ADMIN_PASSWORD,
-            EMAIL_USERNAME,
-            EMAIL_PASSWORD
           script: |
             echo "Backup de l'état actuel"
-            
             docker ps --filter "status=running" > deploy-backup-containers.txt || echo "Aucun container actif"
             docker-compose logs > deploy-backup-logs.txt || echo "Aucun log à sauvegarder"
-            
+
             echo "Pull des dernières images"
             docker pull ${{ secrets.DOCKER_USERNAME }}/jo2024-backend
             docker pull ${{ secrets.DOCKER_USERNAME }}/jo2024-frontend
 
-            echo "Vérification de la disponibilité de la base de données"
-            nc -zv db 5432 || (echo "Base de données non disponible" && exit 1)
-
-            echo "Restart des services"
+            echo "Création du fichier .env avec les secrets"
+            cat <<EOF > .env
+            POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+            POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+            POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+            JWT_SECRET=${{ secrets.JWT_SECRET }}
+            JWT_EXPIRATION=${{ secrets.JWT_EXPIRATION }}
+            EMAIL_USERNAME=${{ secrets.EMAIL_USERNAME }}
+            EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}
+            ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}
+            ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }}
+            SMTP_HOST=${{ secrets.SMTP_HOST }}
+            SMTP_PORT=${{ secrets.SMTP_PORT }}
+            ID_GOOGLE=${{ secrets.ID_GOOGLE }}
+            MDP_GOOGLE=${{ secrets.MDP_GOOGLE }}
+            EOF
+  
+            echo "Arrêt des services existants"
             docker-compose down
+            
+            echo "Démarrage des nouveaux services"
             docker-compose up -d --build
-
+            
             echo "Vérification de la santé du backend"
-            sleep 30  # Attente pour laisser le backend démarrer
+            sleep 30
             curl --fail http://localhost:8080/actuator/health || (echo "Le backend ne répond pas correctement" && exit 1)
